--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ description = "ptc-agent"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "httpx>=0.28.1",
+    "httpx[http2]>=0.28.1",
     # LangChain core packages (v1)
     "langchain>=1.0.0",
     "langchain-core>=1.0.0",
