feat(agent): add flash agent mode for fast lightweight responses

--- a/agent_config.yaml
+++ b/agent_config.yaml
@@ -6,7 +6,8 @@
 
 llm:
   # Model name from src/llms/manifest/models.json
-  name: "claude-sonnet-4-5" # 切换到 Claude Sonnet 4.5（原：minimax-m2.1）
+  name: "gemini-3-pro"
+  flash: "gemini-3-flash"
 
 daytona:
   # Daytona sandbox configuration
