chore(deploy): update Docker config and env defaults

--- a/.env.example
+++ b/.env.example
@@ -59,13 +59,17 @@ S3_REGION=us-east-1
 # OSS_ENDPOINT=oss-cn-hangzhou.aliyuncs.com
 # OSS_MAX_UPLOAD_SIZE=10485760
 
-# Database configuration (local)
+# Database configuration
 DB_TYPE=postgres
 DB_HOST=localhost
 DB_PORT=5432
-#DB_USER=postgres
-#DB_PASSWORD=postgres
-#DB_NAME=postgres
+DB_USER=ptc_admin
+DB_PASSWORD=your_db_password_here
+DB_NAME=ptc_agent
+
+# Redis
+REDIS_PASSWORD=your_redis_password_here
+REDIS_URL=redis://:your_redis_password_here@localhost:6379/0
 
 # -----------------------------------------------------------------------------
 # InfoFlow Base URL
