feat(market-data): add daily stock endpoint with cache service

--- a/config.yaml
+++ b/config.yaml
@@ -85,6 +85,7 @@ redis:
     metadata_summary: 600  # Metadata summary cache TTL (10 minutes)
     workflow_events: 86400  # Workflow event buffer TTL (24 hours)
     intraday_1min: 60  # 1 minute cache for intraday data
+    daily_stock: 3600  # 1 hour cache for daily EOD data
 
   # Cache Invalidation
   cache_invalidate_on_write: true  # Invalidate cache on writes
