--- a/web/package.json
+++ b/web/package.json
@@ -16,17 +16,20 @@
     "axios": "^1.7.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "exceljs": "^4.4.0",
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.1",
+    "react-pdf": "^10.3.0",
     "react-router-dom": "^6.21.0",
     "react-syntax-highlighter": "^16.1.0",
     "recharts": "^3.7.0",
     "remark-gfm": "^4.0.0",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
