--- a/web/package.json
+++ b/web/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "exceljs": "^4.4.0",
+    "framer-motion": "^12.34.0",
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.562.0",
