feat(auth): add Supabase JWT bearer auth service

--- a/web/.env.example
+++ b/web/.env.example
@@ -1,3 +1,7 @@
 # Financial Modeling Prep API Key (stock chart data)
 # Get key: https://financialmodelingprep.com/developer/docs/
 VITE_FMP_API_KEY=your_fmp_api_key_here
+
+# Supabase Auth
+VITE_SUPABASE_URL=https://xxxxx.supabase.co
+VITE_SUPABASE_PUBLISHABLE_KEY=your-supabase-publishable-key
