--- a/.env.example
+++ b/.env.example
@@ -59,6 +59,9 @@ S3_REGION=us-east-1
 # OSS_ENDPOINT=oss-cn-hangzhou.aliyuncs.com
 # OSS_MAX_UPLOAD_SIZE=10485760
 
+# Supabase Auth
+SUPABASE_URL=https://xxxxx.supabase.co
+
 # Database configuration
 DB_TYPE=postgres
 DB_HOST=localhost
