--- a/web/package.json
+++ b/web/package.json
@@ -20,10 +20,12 @@
     "exceljs": "^4.4.0",
     "framer-motion": "^12.34.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.8.13",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^16.5.4",
     "react-markdown": "^9.0.1",
     "react-pdf": "^10.3.0",
     "react-router-dom": "^6.21.0",
@@ -46,7 +48,6 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.26",
     "globals": "^16.5.0",
-
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.19",
     "vite": "^5.0.8"
