feat(server): add Codex OAuth device code flow with LLM integration

--- a/.env.example
+++ b/.env.example
@@ -81,3 +81,6 @@ REDIS_URL=redis://:your_redis_password_here@localhost:6379/0
 # InfoFlow Base URL
 # -----------------------------------------------------------------------------
 # INFOFLOW_BASE_URL=InfowFlow_base_url_here
+
+# Optional: enable service-to-service auth (for ginlix-integration)
+# INTERNAL_SERVICE_TOKEN=
