refactor(server): delegate membership and usage limits to ginlix-auth

--- a/.env.example
+++ b/.env.example
@@ -65,6 +65,9 @@ SUPABASE_URL=https://xxxxx.supabase.co
 # When SUPABASE_URL is unset, this user ID is used for all requests
 AUTH_USER_ID=local-dev-user
 
+# ginlix-auth service (optional — enables membership quotas when set)
+# AUTH_SERVICE_URL=http://localhost:8003
+
 # Database configuration
 DB_TYPE=postgres
 DB_HOST=localhost
