chore(deploy): add VITE_ACCOUNT_URL build arg to web Dockerfile

--- a/deploy/Dockerfile.web
+++ b/deploy/Dockerfile.web
@@ -6,9 +6,11 @@ COPY web/ .
 ARG VITE_API_BASE_URL=""
 ARG VITE_SUPABASE_URL=""
 ARG VITE_SUPABASE_PUBLISHABLE_KEY=""
+ARG VITE_ACCOUNT_URL=""
 ENV VITE_API_BASE_URL=${VITE_API_BASE_URL}
 ENV VITE_SUPABASE_URL=${VITE_SUPABASE_URL}
 ENV VITE_SUPABASE_PUBLISHABLE_KEY=${VITE_SUPABASE_PUBLISHABLE_KEY}
+ENV VITE_ACCOUNT_URL=${VITE_ACCOUNT_URL}
 RUN npm run build
 
 FROM alpine:3.20
