--- a/web/package.json
+++ b/web/package.json
@@ -21,6 +21,7 @@
     "framer-motion": "^12.34.0",
     "html2canvas": "^1.4.1",
     "i18next": "^25.8.13",
+    "katex": "^0.16.32",
     "lightweight-charts": "^4.1.3",
     "lucide-react": "^0.562.0",
     "react": "^19.2.4",
@@ -32,8 +33,10 @@
     "react-syntax-highlighter": "^16.1.0",
     "react-to-print": "^3.2.0",
     "recharts": "^3.7.0",
+    "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
     "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
