--- a/web/.env.example
+++ b/web/.env.example
@@ -5,5 +5,5 @@ VITE_SUPABASE_PUBLISHABLE_KEY=your-supabase-publishable-key
 # When VITE_SUPABASE_URL is unset, this user ID is used for all requests
 VITE_AUTH_USER_ID=local-dev-user
 
-# Account management URL (ginlix-auth frontend, set in production)
+# Account management URL
 # VITE_ACCOUNT_URL=/account
