feat(agent): add self-improve skill with GitHub bot config

--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ ALPHA_VANTAGE_API_KEY=your_alpha_vantage_api_key_here
 
 # MCP Server Credentials
 GITHUB_TOKEN=your_github_token_here
+
+# GitHub Bot (agent self-improvement — issue reporting, PR proposals)
+# Fine-grained PAT from bot machine user (needs: Issues R/W, Contents R/W, Pull Requests R/W)
+GITHUB_BOT_TOKEN=your_github_bot_token_here
 TAVILY_API_KEY=your_tavily_api_key_here
 SERPER_API_KEY=your_serper_api_key_here
 
