--- a/web/package.json
+++ b/web/package.json
@@ -39,6 +39,7 @@
     "recharts": "^3.7.0",
     "rehype-katex": "^7.0.1",
     "rehype-raw": "^7.0.0",
+    "remark-cjk-friendly": "^2.0.1",
     "remark-gfm": "^4.0.0",
     "remark-math": "^6.0.0",
     "tailwind-merge": "^3.4.0"
